migrate auth endpoints (#216)
